--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -3,6 +3,9 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+ *{
+   border:1px solid red;
+ }
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
